fix(동시성 - redisson): screening-seat 조합으로 락을 걸어 진행
- redission 세팅
- 테스트 코드로 동시성 검증