@@ -1,4 +1,5 @@
-package project.redis.infrastructure.reservation.adapter;
+package project.redis.infrastructure.integration.reservation;
+
 
 import static java.util.concurrent.Executors.newFixedThreadPool;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -6,19 +7,22 @@ import static org.assertj.core.api.Assertions.assertThat;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.UUID;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.TestConstructor;
-import project.redis.domain.reservation.Reservation;
+import project.redis.application.reservation.port.inbound.ReserveCommandParam;
+import project.redis.application.reservation.service.ReservationCommandService;
 import project.redis.domain.screening.Screening;
 import project.redis.domain.seat.Seat;
-import project.redis.infrastructure.TestConfiguration;
+import project.redis.infrastructure.IntegrationTestConfiguration;
 import project.redis.infrastructure.reservation.entity.ReservationJpaEntity;
 import project.redis.infrastructure.reservation.entity.ReservationSeatJpaEntity;
 import project.redis.infrastructure.reservation.repository.ReservationJpaRepository;
@@ -30,28 +34,23 @@ import project.redis.infrastructure.seat.mapper.SeatInfraMapper;
 import project.redis.infrastructure.seat.respository.SeatJpaRepository;
 import project.redis.infrastructure.util.TestContainerSupport;
 
-
 @Slf4j
 @SpringBootTest
-@ContextConfiguration(classes = TestConfiguration.class)
+@ContextConfiguration(classes = IntegrationTestConfiguration.class)
 @TestConstructor(autowireMode = TestConstructor.AutowireMode.ALL)
 @RequiredArgsConstructor
-class ReservationCommandAdapterTest extends TestContainerSupport {
+public class ReservationCommandServiceIntegrationTest extends TestContainerSupport {
 
-    private final ReservationCommandAdapter reservationCommandAdapter;
+    private final ReservationCommandService reservationCommandService;
+
     private final ReservationJpaRepository reservationJpaRepository;
     private final ReservationSeatJpaRepository reservationSeatJpaRepository;
-    private final SeatJpaRepository seatJpaRepository;
     private final ScreeningJpaRepository screeningJpaRepository;
+    private final SeatJpaRepository seatJpaRepository;
 
-    @AfterEach
-    void tearDown() {
-        reservationSeatJpaRepository.deleteAll();
-        reservationJpaRepository.deleteAll();
-    }
-
+    @DisplayName("상영 예약 동시성 테스트")
     @Test
-    void testReserve() {
+    void testReservationConcurrency() throws InterruptedException {
         LocalDate limitDay = LocalDate.now().plusDays(2);
         List<ScreeningJpaEntity> screenings = screeningJpaRepository.findAllOrderByReleaseDescAndScreenStartTimeAsc(
                 limitDay);
@@ -64,47 +63,12 @@ class ReservationCommandAdapterTest extends TestContainerSupport {
                 .map(ScreeningInfraMapper::toScreening)
                 .get();
 
-        List<Seat> seats = seatJpaRepository.findByCinemaId(screening.getCinema().getCinemaId()).stream()
+        List<UUID> seatIds = seatJpaRepository.findByCinemaId(screening.getCinema().getCinemaId()).stream()
                 .filter(seatJpaEntity ->
                         seatJpaEntity.getSeatNumber().contains("A"))
                 .map(SeatInfraMapper::toSeat)
-                .toList();
-
-        Reservation reservation = Reservation.generateReservation(
-                null,
-                LocalDateTime.now(),
-                "hongs",
-                screening,
-                seats);
-
-        reservationCommandAdapter.reserve(reservation);
-
-        List<ReservationJpaEntity> reservations = reservationJpaRepository.findAll();
-        List<ReservationSeatJpaEntity> reservationSeats = reservationSeatJpaRepository.findAll();
-
-        assertThat(reservations.size()).isEqualTo(1);
-        assertThat(reservationSeats.size()).isEqualTo(5);
-    }
-
-    @Test
-    void testReserveConcurrencyTest() throws InterruptedException {
-        LocalDate limitDay = LocalDate.now().plusDays(2);
-        List<ScreeningJpaEntity> screenings = screeningJpaRepository.findAllOrderByReleaseDescAndScreenStartTimeAsc(
-                limitDay);
-
-        Screening screening = screenings.stream()
-                .filter(screeningJpaEntity ->
-                        screeningJpaEntity.getScreeningStartTime().isAfter(LocalDateTime.now())
-                )
-                .findFirst()
-                .map(ScreeningInfraMapper::toScreening)
-                .get();
-
-        List<Seat> seats = seatJpaRepository.findByCinemaId(screening.getCinema().getCinemaId()).stream()
-                .filter(seatJpaEntity ->
-                        seatJpaEntity.getSeatNumber().contains("A"))
-                .map(SeatInfraMapper::toSeat)
-                .toList();
+                .map(Seat::getSeatId)
+                .collect(Collectors.toList());
 
         int threadCount = 10;
         ExecutorService executorService = newFixedThreadPool(threadCount);
@@ -114,15 +78,11 @@ class ReservationCommandAdapterTest extends TestContainerSupport {
             int finalI = i;
             executorService.execute(() -> {
                 try {
-                    Reservation reservation = Reservation.generateReservation(
-                            null,
-                            LocalDateTime.now(),
-                            "user-" + Thread.currentThread().getId(),
-                            screening,
-                            seats
-                    );
 
-                    reservationCommandAdapter.reserve(reservation);
+                    ReserveCommandParam param = new ReserveCommandParam(seatIds, screening.getScreeningId(),
+                            "user-" + Thread.currentThread().getId());
+                    reservationCommandService.reserve(param);
+
                 } catch (Exception e) {
                     log.info("failed to reserve reservation {}", finalI);
                 } finally {
@@ -133,6 +93,40 @@ class ReservationCommandAdapterTest extends TestContainerSupport {
 
         latch.await();
         executorService.shutdown();
+
+        List<ReservationJpaEntity> reservations = reservationJpaRepository.findAll();
+        List<ReservationSeatJpaEntity> reservationSeats = reservationSeatJpaRepository.findAll();
+
+        assertThat(reservations.size()).isEqualTo(1);
+        assertThat(reservationSeats.size()).isEqualTo(5);
+    }
+
+
+    @DisplayName("상영 예약 테스트")
+    @Test
+    void testReservation() throws InterruptedException {
+        LocalDate limitDay = LocalDate.now().plusDays(2);
+        List<ScreeningJpaEntity> screenings = screeningJpaRepository.findAllOrderByReleaseDescAndScreenStartTimeAsc(
+                limitDay);
+
+        Screening screening = screenings.stream()
+                .filter(screeningJpaEntity ->
+                        screeningJpaEntity.getScreeningStartTime().isAfter(LocalDateTime.now())
+                )
+                .findFirst()
+                .map(ScreeningInfraMapper::toScreening)
+                .get();
+
+        List<UUID> seatIds = seatJpaRepository.findByCinemaId(screening.getCinema().getCinemaId()).stream()
+                .filter(seatJpaEntity ->
+                        seatJpaEntity.getSeatNumber().contains("A"))
+                .map(SeatInfraMapper::toSeat)
+                .map(Seat::getSeatId)
+                .collect(Collectors.toList());
+
+        ReserveCommandParam param = new ReserveCommandParam(seatIds, screening.getScreeningId(),
+                "user-" + Thread.currentThread().getId());
+        reservationCommandService.reserve(param);
 
         List<ReservationJpaEntity> reservations = reservationJpaRepository.findAll();
         List<ReservationSeatJpaEntity> reservationSeats = reservationSeatJpaRepository.findAll();
